// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Babel Package transformer should work with eslint config 1`] = `
Object {
  "babel": Object {
    "plugins": Array [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": Array [
      Array [
        "@babel/env",
        Object {
          "targets": Object {
            "node": "6.9.5",
          },
        },
      ],
    ],
  },
  "devDependencies": Object {
    "@babel/cli": "^7.1.2",
    "@babel/core": "^7.1.2",
    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
    "@babel/preset-env": "^7.1.0",
    "@babel/register": "^7.0.0",
    "babel-eslint": "^10.0.1",
  },
  "eslintConfig": Object {
    "env": Object {
      "es6": true,
      "jest": true,
      "mocha": true,
      "node": true,
    },
    "extends": "eslint:recommended",
    "parserOptions": Object {
      "ecmaVersion": 2018,
      "modules": true,
      "sourceType": "module",
    },
    "plugins": Array [
      "prettier",
    ],
    "rules": Object {
      "prettier/prettier": "error",
    },
  },
  "metapak": Object {
    "configs": Array [
      "eslint",
      "babel",
    ],
    "data": Object {
      "bundleFiles": Array [
        "dist/**/*.js",
      ],
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "prettier": Object {
    "printWidth": 80,
    "proseWrap": "always",
    "semi": true,
    "singleQuote": true,
    "trailingComma": "all",
  },
  "scripts": Object {
    "cli": "env NODE_ENV=\${NODE_ENV:-cli}",
    "compile": "babel src --out-dir=dist",
    "preversion": " && npm run compile",
    "test": "",
  },
}
`;

exports[`Babel Package transformer should work with jest config 1`] = `
Object {
  "babel": Object {
    "plugins": Array [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": Array [
      Array [
        "@babel/env",
        Object {
          "targets": Object {
            "node": "6.9.5",
          },
        },
      ],
    ],
  },
  "devDependencies": Object {
    "@babel/cli": "^7.1.2",
    "@babel/core": "^7.1.2",
    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
    "@babel/preset-env": "^7.1.0",
    "@babel/register": "^7.0.0",
    "babel-core": "^7.0.0-0",
  },
  "metapak": Object {
    "configs": Array [
      "babel",
      "jest",
    ],
    "data": Object {
      "bundleFiles": Array [
        "dist/**/*.js",
      ],
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "scripts": Object {
    "cli": "env NODE_ENV=\${NODE_ENV:-cli}",
    "compile": "babel src --out-dir=dist",
    "preversion": " && npm run compile",
    "test": "",
  },
}
`;

exports[`Babel Package transformer should work with mocha config 1`] = `
Object {
  "babel": Object {
    "plugins": Array [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": Array [
      Array [
        "@babel/env",
        Object {
          "targets": Object {
            "node": "6.9.5",
          },
        },
      ],
    ],
  },
  "devDependencies": Object {
    "@babel/cli": "^7.1.2",
    "@babel/core": "^7.1.2",
    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
    "@babel/preset-env": "^7.1.0",
    "@babel/register": "^7.0.0",
  },
  "metapak": Object {
    "configs": Array [
      "babel",
      "mocha",
    ],
    "data": Object {
      "bundleFiles": Array [
        "dist/**/*.js",
      ],
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "scripts": Object {
    "cli": "env NODE_ENV=\${NODE_ENV:-cli}",
    "compile": "babel src --out-dir=dist",
    "preversion": " && npm run compile",
    "test": "",
  },
}
`;

exports[`Babel Package transformer should work with some files 1`] = `
Object {
  "babel": Object {
    "plugins": Array [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": Array [
      Array [
        "@babel/env",
        Object {
          "targets": Object {
            "node": "6.9.5",
          },
        },
      ],
    ],
  },
  "devDependencies": Object {
    "@babel/cli": "^7.1.2",
    "@babel/core": "^7.1.2",
    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
    "@babel/preset-env": "^7.1.0",
    "@babel/register": "^7.0.0",
  },
  "metapak": Object {
    "configs": Array [
      "babel",
    ],
    "data": Object {
      "bundleFiles": Array [
        "src/**/*.js",
        "LICENSE",
        "README.md",
        "CHANGELOG.md",
        "dist/**/*.js",
      ],
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "scripts": Object {
    "cli": "env NODE_ENV=\${NODE_ENV:-cli}",
    "compile": "babel src --out-dir=dist",
    "preversion": " && npm run compile",
    "test": "",
  },
}
`;
